# owid-datautils-py

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yaml  Makefile  README.md  codecov.yaml  pyproject.toml  requriements-dev.txt  setup.py
.github/workflows/: python-package.yml
docs/: conf.py  index.rst
docs/apidoc-templates/: module.rst_t
docs/src/: datautils.rst  modules.rst
owid/datautils/: __init__.py  checks.py  common.py  dataframes.py  decorators.py  format.py  geo.py  s3.py  utils.py  web.py
owid/datautils/format/: dates.py  numbers.py
owid/datautils/google/: api.py  config.py  sheets.py
owid/datautils/io/: __init__.py  archive.py  compress.py  df.py  local.py  s3.py
tests/: test_dataframes.py  test_decorators.py  test_geo.py  test_owid_cache.py  test_s3.py  test_ui.py  test_utils.py  test_web.py
tests/format/: test_numbers.py
tests/google/: test_api.py  test_config.py  test_sheets.py
tests/io/: test_archive.py  test_df.py  test_local.py  test_s3.py
